--- a/public/staff/css/style.css
+++ b/public/staff/css/style.css
@@ -29,7 +29,7 @@
     position: relative;
     /* left: 150px; */
     left: 8%;
-    width: calc(100% - 180px);
+    width: calc(100% - 160px);
 }
 
 
